initial production guide
